# versioner

./: README.md  pyproject.toml
src/versioner/: __init__.py  __version__.py  notebook_versioner.py  table_namer.py  version_reader.py  yaml_updater.py
